--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,3 +13,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - run: ls
+    
+    - name: install dependencies
+      run: pip install --no-cache-dir -r requirements.txt
+      
+    - name: deploy
+      run: Copy-Item -Path . -Destination "C:\Program Files\sise.micro-message-rna-project\be\sise.micro-rna-m-rna-targets-interactions.backend\deploy" -Recurse
