--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,4 +19,4 @@ jobs:
       run: pip install --no-cache-dir -r requirements.txt
     
     - name: deploy
-      run: Copy-Item -Path . -Destination "C:\Program Files\sise.micro-message-rna-project\be\sise.micro-rna-m-rna-targets-interactions.backend\deploy" -Recurse -Force
+      run: Copy-Item -Path ./ -Destination "C:\Program Files\sise.micro-message-rna-project\be\sise.micro-rna-m-rna-targets-interactions.backend\deploy" -Recurse -Force
