finish implementation. need to work on response time

--- a/statistics_config.ini
+++ b/statistics_config.ini
@@ -1,8 +1,8 @@
 [DETAILS]
 features_details = [{"name": "miRNAPairingCount_X3p_mismatch",
-                    "featureTypeId": 2},
+                    "featureTypeId": 0},
                     {"name": "Energy_MEF_local_target",
-                    "featureTypeId": 1}]
+                    "featureTypeId": 0}]
 
 features_types = [{"id": 0,
                    "type": "numeric",
@@ -13,3 +13,6 @@ features_types = [{"id": 0,
                     "filters": ["True", "False"]
                   }
                 ]
+[FEATURES]
+main_features_names_list = ['Gene_ID', 'region', 'seed_family', 'mirna_sequence', 'mirna_id']
+main_features_back_to_front_names = {"seed_family": "seedFamilies", "mirna_id": "miRnaIds", "Gene_ID": "geneIds",  "region": "regions", "mirna_sequence": "mirnaSequence"}
